PIC-5667: newman-server.sh removed unnecessary things from the script